# Sam-Codes

./: README.md
ASM/: asm.txt
ASM/Redeemhack/: Hackmsg.asm
Cursor_Mod/: LICENSE.txt
Cursor_Mod/cursor.egg-info/: PKG-INFO  SOURCES.txt
Modules/Datacx/: README.md  pyproject.toml  setup.py
Modules/Datacx/datacxx/: CSVcursor.py  JSONcursor.py  __init__.py
RustaceanLand/: Cargo.toml
RustaceanLand/src/: main.rs
SysItems/.idea2/: modules.xml
Userstuff/C_codes/: FileH.cpp  citius.c
Userstuff/Creations/: AI.py  FinanceCreatorxl.py  Hospital.py  MINI-LINUX.py  S#.py  backup-linux-mini.py  ez.py  hacking toolset.py  trial.xlsx
Userstuff/Creations/Codex/: CpuShell.py  Mini_CPU.py  new.py
Userstuff/Creations/RAND LANGS/: ITMB  KERNELpop.txt  Rules.txt  Samster.txt  random ness.txt
Userstuff/Creations/databasetrial/: TaskManager.py
Userstuff/Learning/: dontdel[safety feat]  questions.ipynb
Userstuff/Learning/AsyncAwait/: note.py  notes.txt
Userstuff/Learning/Collections/: dequ.ipynb
Userstuff/Learning/More-Py/: closures.ipynb  yield.ipynb
Userstuff/Learning/OpeningTheBrowser/: browser.py
Userstuff/Learning/SQL/: data.db  forreader.txt  notes.txt  reader.py  shower.py  sqlit.py
Userstuff/Learning/SendingEmails/: email.py  template.html
Userstuff/Learning/Subprocess/: subproc.ipynb
Userstuff/Learning/Working_with_time/: DateandTime.py  Note.txt
Userstuff/Learning/classes/: Class.txt
Userstuff/remember_py/: classes.py  imp codes[test_6].py  one program.py
app/: app.ipynb  app.py  app.spec
app/APpp/: app.ipynb  app.py
(+23 files in other folders)
